Fixed Double Scrollbars

--- a/rub/css/1-base.css
+++ b/rub/css/1-base.css
@@ -30,18 +30,7 @@
   /* (de) Korrektur:Das Zurücksetzen der Abstände verursacht zu kleine Selectboxen. */
   option { padding-left:0.4em; } /* LTR */
   select { padding:1px; }
-
- /**
-  * (en) Global fix of the Italics bugs in IE 5.x and IE 6
-  * (de) Globale Korrektur des Italics Bugs des IE 5.x und IE 6
-  *
-  * @bugfix
-  * @affected   IE 5.x/Win, IE6
-  * @css-for    IE 5.x/Win, IE6
-  * @valid      yes
-  */
-  * html body * { overflow:visible; }
-
+  
   body {
     /* (en) Fix for rounding errors when scaling font sizes in older versions of Opera browser */
     /* (de) Beseitigung von Rundungsfehler beim Skalieren von Schriftgrößen in älteren Opera Versionen */
